--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/list.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>List</title>
   </head>
   <body>
     <div id="pagewrap">
       <header id="header">
-        <a href="#"
+        <a href="view.html"
           ><svg
+            class="header__menu"
             width="24"
             height="24"
             viewBox="0 0 24 24"
@@ -47,19 +49,21 @@
         </a>
 
         <h2 class="header__title">Weight Monitor</h2>
-        <svg
-          class="header__add"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M13.1739 4.17391C13.1739 3.52558 12.6483 3 12 3C11.3517 3 10.8261 3.52558 10.8261 4.17391V10.8261H4.17391C3.52558 10.8261 3 11.3517 3 12C3 12.6483 3.52558 13.1739 4.17391 13.1739H10.8261V19.8261C10.8261 20.4744 11.3517 21 12 21C12.6483 21 13.1739 20.4744 13.1739 19.8261V13.1739H19.8261C20.4744 13.1739 21 12.6483 21 12C21 11.3517 20.4744 10.8261 19.8261 10.8261H13.1739V4.17391Z"
-            fill="#332317"
-          />
-        </svg>
+        <a href="#">
+          <svg
+            class="header__add"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M13.1739 4.17391C13.1739 3.52558 12.6483 3 12 3C11.3517 3 10.8261 3.52558 10.8261 4.17391V10.8261H4.17391C3.52558 10.8261 3 11.3517 3 12C3 12.6483 3.52558 13.1739 4.17391 13.1739H10.8261V19.8261C10.8261 20.4744 11.3517 21 12 21C12.6483 21 13.1739 20.4744 13.1739 19.8261V13.1739H19.8261C20.4744 13.1739 21 12.6483 21 12C21 11.3517 20.4744 10.8261 19.8261 10.8261H13.1739V4.17391Z"
+              fill="#332317"
+            />
+          </svg>
+        </a>
       </header>
       <main class="main">
         <button type="button" class="main__button">
@@ -122,6 +126,7 @@
           </div>
           <div class="button__info">
             <svg
+              class="info__edit"
               width="24"
               height="24"
               viewBox="0 0 24 24"
