--- a/view.html
+++ b/view.html
@@ -115,8 +115,8 @@
       </main>
       <footer class="footer">
         <hr class="footer__hr" />
-        <div class="footer__buttons">
-          <button class="button__overview">
+        <div class="footer__container">
+          <a href="view.html">
             <svg
               width="40"
               height="40"
@@ -129,10 +129,11 @@
                 fill="#332317"
               />
             </svg>
-            <div class="button__text">Overview</div>
-          </button>
-          <button class="button__history">
+            <div class="link__text">Overview</div>
+          </a>
+          <a href="history.html">
             <svg
+              class="history__img"
               width="40"
               height="40"
               viewBox="0 0 40 40"
@@ -144,8 +145,8 @@
                 fill="#A5A5A5"
               />
             </svg>
-            <div class="button__text">History</div>
-          </button>
+            <div class="link__text">History</div>
+          </a>
         </div>
       </footer>
     </div>
