--- a/history.html
+++ b/history.html
@@ -12,46 +12,51 @@
   <body>
     <div id="pagewrap">
       <header id="header">
-        <svg
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M19.75 12C19.75 11.5858 19.4142 11.25 19 11.25H5C4.58579 11.25 4.25 11.5858 4.25 12C4.25 12.4142 4.58579 12.75 5 12.75H19C19.4142 12.75 19.75 12.4142 19.75 12Z"
-            fill="#332317"
-          />
-          <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M19.75 7C19.75 6.58579 19.4142 6.25 19 6.25H5C4.58579 6.25 4.25 6.58579 4.25 7C4.25 7.41421 4.58579 7.75 5 7.75H19C19.4142 7.75 19.75 7.41421 19.75 7Z"
-            fill="#332317"
-          />
-          <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M19.75 17C19.75 16.5858 19.4142 16.25 19 16.25H5C4.58579 16.25 4.25 16.5858 4.25 17C4.25 17.4142 4.58579 17.75 5 17.75H19C19.4142 17.75 19.75 17.4142 19.75 17Z"
-            fill="#332317"
-          />
-        </svg>
+        <a href="index.html">
+          <svg
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M19.75 12C19.75 11.5858 19.4142 11.25 19 11.25H5C4.58579 11.25 4.25 11.5858 4.25 12C4.25 12.4142 4.58579 12.75 5 12.75H19C19.4142 12.75 19.75 12.4142 19.75 12Z"
+              fill="#332317"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M19.75 7C19.75 6.58579 19.4142 6.25 19 6.25H5C4.58579 6.25 4.25 6.58579 4.25 7C4.25 7.41421 4.58579 7.75 5 7.75H19C19.4142 7.75 19.75 7.41421 19.75 7Z"
+              fill="#332317"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M19.75 17C19.75 16.5858 19.4142 16.25 19 16.25H5C4.58579 16.25 4.25 16.5858 4.25 17C4.25 17.4142 4.58579 17.75 5 17.75H19C19.4142 17.75 19.75 17.4142 19.75 17Z"
+              fill="#332317"
+            />
+          </svg>
+        </a>
+
         <h2 class="header__title">History</h2>
-        <svg
-          class="header__edit"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M13.1739 4.17391C13.1739 3.52558 12.6483 3 12 3C11.3517 3 10.8261 3.52558 10.8261 4.17391V10.8261H4.17391C3.52558 10.8261 3 11.3517 3 12C3 12.6483 3.52558 13.1739 4.17391 13.1739H10.8261V19.8261C10.8261 20.4744 11.3517 21 12 21C12.6483 21 13.1739 20.4744 13.1739 19.8261V13.1739H19.8261C20.4744 13.1739 21 12.6483 21 12C21 11.3517 20.4744 10.8261 19.8261 10.8261H13.1739V4.17391Z"
-            fill="#332317"
-          />
-        </svg>
+        <a href="create.html"
+          ><svg
+            class="header__edit"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M13.1739 4.17391C13.1739 3.52558 12.6483 3 12 3C11.3517 3 10.8261 3.52558 10.8261 4.17391V10.8261H4.17391C3.52558 10.8261 3 11.3517 3 12C3 12.6483 3.52558 13.1739 4.17391 13.1739H10.8261V19.8261C10.8261 20.4744 11.3517 21 12 21C12.6483 21 13.1739 20.4744 13.1739 19.8261V13.1739H19.8261C20.4744 13.1739 21 12.6483 21 12C21 11.3517 20.4744 10.8261 19.8261 10.8261H13.1739V4.17391Z"
+              fill="#332317"
+            />
+          </svg>
+        </a>
       </header>
       <main class="main">
         <div class="container">
