--- a/create.html
+++ b/create.html
@@ -30,18 +30,15 @@
       </header>
       <main class="main">
         <form method="post" class="form__add">
-          <input type="text" class="form__custom-text" value="Name" />
+          <input type="text" class="form__custom-text" placeholder="Name" />
           <div class="form__custom-select">
             <select name="species" id="species">
               <option value="species">Species</option>
             </select>
           </div>
-          <input
-            placeholder="Birthday"
-            type="date"
-            data-date=""
-            class="form__custom-date"
-          />
+          <div class="form__birthday">
+            <input placeholder="Birthday" type="text" />
+          </div>
         </form>
       </main>
     </div>
